[package]
name = "m18-protocol"
version = "0.1.0"
edition = "2021"
authors = ["fred314159265"]
description = "Rust library for interfacing with Milwaukee M18 battery packs via serial communication"
license = "Unlicense"
repository = "https://github.com/fred314159265/m18-protocol-rs"
keywords = ["milwaukee", "m18", "battery", "serial", "protocol"]
categories = []

[dependencies]
serialport = "4.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
# reqwest = { version = "0.11", features = ["json"], optional = true }
# tokio = { version = "1.0", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
inquire = "0.7"

[features]
default = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "health_report"
path = "examples/health_report.rs"