[package]
name = "m18-protocol"
version = "0.1.0"
edition = "2021"
authors = ["fred314159265"]
description = "Rust library for interfacing with Milwaukee M18 battery packs via serial communication"
license = "Unlicense"
repository = "https://github.com/fred314159265/m18-protocol-rs"
keywords = ["milwaukee", "m18", "battery", "serial", "protocol"]
categories = []

[dependencies]
serialport = "4.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
serde_json = "1.0"
inquire = "0.9"

[features]
default = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "health_report"
path = "examples/health_report.rs"